...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:onClick="hideVirtualKeyboard">

            <TextView
                android:id="@+id/introduction_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="hideVirtualKeyboard"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="30dp"
                android:text="@string/introduction_tv"
                android:textSize="16dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/user_name_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
...
