...
        <item>@string/studies_inf_li</item>
        <item>@string/studies_bwl_li</item>
        <item>@string/studies_phi_li</item>
    </string-array>

    <array name="lectures_informatics">
        <item>@string/lv_analysis_t1</item>
        <item>@string/lv_introduction_computer_science</item>
        <item>@string/lv_programming_0</item>
        <item>@string/lv_foundations_computer_science</item>
        <item>@string/lv_numerical_computing_linear_algebra</item>
        <item>@string/lv_computer_mathematics_1</item>
        <item>@string/lv_introduction_structured_programming</item>
...
