<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@drawable/background_2"
    tools:context="at.tugraz.morning08.a_students_life.MainPageActivity">
...
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stress_btn" />

                <at.tugraz.morning08.a_students_life.components.MyProgressBar
                    android:id="@+id/progressBarStressMainPage"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/progress_bar_circular" />
...
